# herdr-leap

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  herdr-plugin.toml
scripts/: lab-smart-nav.sh  open-leap
src/: app.rs  clipboard.rs  config.rs  extract.rs  extract_app.rs  extract_ui.rs  herdr_client.rs  hints.rs  leap.rs  lib.rs  main.rs  smart_nav.rs  theme.rs  ui.rs
