[package]
name = "herdr-leap"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
description = "tmux-jump-style character hints and region copy for Herdr"
license = "MIT"
authors = ["Roosevelt Advisors"]

[[bin]]
name = "herdr-leap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
strip = true
